// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$ it works 1`] = `
Array [
  <h1>
    Heading 1
  </h1>,
  <h2>
    Heading 2
  </h2>,
  <p>
    Paragraph
  </p>,
]
`;

exports[`css-in-ls emotion 1`] = `
<button
  className="css-f5yfbg"
>
  Click me!
</button>
`;

exports[`css-in-ls styled-components 1`] = `
<button
  className="sc-bdVaJa YQOsB"
>
  Click me!
</button>
`;

exports[`h can render elements 1`] = `
<p>
  Yoo!
</p>
`;

exports[`h can render elements with props 1`] = `
<p
  className="thing"
>
  Yoo!
</p>
`;
